--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MIPT Praktikos Darbas 4</string>
+    <string name="text_view_notes">Notes</string>
 </resources>
