--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MIPT Praktikos Darbas 4</string>
     <string name="text_view_notes">Notes</string>
+    <string name="add_note_title_hint">Note Title</string>
+    <string name="add_note">Add Note</string>
 </resources>
