--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MIPT Praktikos Darbas 4</string>
     <string name="text_view_notes">Notes</string>
-    <string name="add_note_title_hint">Note Title</string>
+    <string name="note_title_hint">Note Title</string>
     <string name="add_note">Add Note</string>
+    <string name="delete_note">Delete Note</string>
 </resources>
